--- a/views/partials/navbarLogin.handlebars
+++ b/views/partials/navbarLogin.handlebars
@@ -24,6 +24,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="about">About Us</a></li>
                         <li><a href="profile">Profile</a></li>
+                        <li><a href="/">Logout</a></li>
                     </ul>
                 </div>
             </nav>
